// file: proto/gcommon/v1/organization/update_tenant_request.proto
// version: 1.0.0
// guid: 1c9d8c7e-4c50-47b6-b6ff-c2dd363bbd5c

edition = "2023";

package organization.v1;

import "common/v1/request_metadata.proto";
import "organization/v1/tenant.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/organization/";

message UpdateTenantRequest {
  // Request metadata for tracing and context
  common.v1.RequestMetadata metadata = 1;

  // Tenant identifier to update
  string tenant_id = 2 [(buf.validate.field).string.min_len = 1];

  // Updated tenant information
  Tenant tenant = 3;

  // Fields to update in partial mode
  google.protobuf.FieldMask update_mask = 4;

  // Validate only without persisting if true
  bool validate_only = 5;
}
