// file: proto/gcommon/v1/organization/update_tenant_response.proto
// version: 1.0.0
// guid: 24a81e2b-b245-41df-b2f8-fd967f0655d0
edition = "2023";

package organization.v1;

import "common/v1/error.proto";
import "organization/v1/tenant.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organizationpb";

message UpdateTenantResponse {
  // Any errors encountered
  repeated common.v1.Error errors = 1 [(buf.validate.field).repeated.min_items = 1];

  // Success status
  bool success = 2;

  // Updated tenant details
  Tenant tenant = 3;
}
