// file: pkg/organization/proto/requests/configure_tenant_isolation_request.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/organization/proto/jdfalk/gcommon/pkg/organization/proto;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message ConfigureTenantIsolationRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;
  
  // Tenant identifier
  string tenant_id = 2;

  // Isolation configuration to apply
  gcommon.v1.organization.TenantIsolation isolation = 3;
}
