// file: pkg/organization/proto/requests/delete_tenant_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message DeleteTenantRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Tenant identifier to delete
  string tenant_id = 2;
}
