// file: pkg/organization/proto/responses/get_tenant_isolation_response.proto
edition = "2023";

package gcommon.v1.organization;

import "pkg/organization/proto/tenant_isolation.proto";
import "pkg/common/proto/error.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message GetTenantIsolationResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Current isolation configuration
  gcommon.v1.organization.TenantIsolation isolation = 3 [lazy = true];
}
