// file: pkg/organization/proto/requests/get_tenant_request.proto

edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";

import "common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message GetTenantRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Tenant identifier
  string tenant_id = 2;
}
