// file: pkg/organization/proto/responses/get_tenant_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/error.proto";

option features.(pb.go).api_level = API_OPAQUE;

message GetTenantResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Tenant information
  gcommon.v1.organization.Tenant tenant = 3;
}
