// file: pkg/organization/proto/responses/configure_tenant_isolation_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/error.proto";
import "pkg/organization/proto/types/tenant_isolation.proto";

option go_package = "../../../../pb;organizationpb";
option features.(pb.go).api_level = API_HYBRID;

message ConfigureTenantIsolationResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;
  
  // Applied isolation configuration
  gcommon.v1.organization.TenantIsolation isolation = 3 [lazy = true];
}
