// file: pkg/organization/proto/requests/update_tenant_quota_request.proto

edition = "2023";

package gcommon.v1.organization;

import "pkg/organization/proto/tenant_quota.proto";
import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message UpdateTenantQuotaRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Tenant identifier
  string tenant_id = 2;

  // Updated quota configuration
  gcommon.v1.organization.TenantQuota quota = 3;
}
