// file: pkg/organization/proto/responses/update_tenant_quota_response.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

message UpdateTenantQuotaResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Updated quota configuration
  gcommon.v1.organization.TenantQuota quota = 3;
}
