// file: proto/gcommon/v1/organization/api/get_tenant_isolation_request.proto

edition = "2023";

package gcommon.v1.organization.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.organization.api;

message GetTenantIsolationRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Tenant identifier
  string tenant_id = 2;
}
