// file: proto/gcommon/v1/organization/api/list_tenants_response.proto
edition = "2023";

package gcommon.v1.organization.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/error.proto";
import "proto/gcommon/v1/common/api/paginated_response.proto";
import "proto/gcommon/v1/organization/messages/tenant.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.organization.api";

message ListTenantsResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // List of tenants returned
  repeated gcommon.v1.organization.Tenant tenants = 3 [lazy = true];

  // Pagination metadata
  gcommon.v1.common.PaginatedResponse pagination = 4;
}
