// file: proto/gcommon/v1/organization/create_tenant_response.proto
// version: 1.0.0
// guid: 4c1b8703-1137-44ee-b243-49b82281f749
edition = "2023";

package gcommon.v1.organization;

import "gcommon/v1/common/error.proto";
import "gcommon/v1/organization/tenant.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/organization";

message CreateTenantResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1;

  // Success status
  bool success = 2;

  // Newly created tenant details
  gcommon.v1.common.Tenant tenant = 3;
}
