// file: proto/gcommon/v1/organization/delete_tenant_response.proto
// version: 1.0.0
// guid: 4c300220-de58-467e-b7b7-cf2c88ba7bf2
edition = "2023";

package gcommon.v1.organization;

import "gcommon/v1/common/error.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/organization";

message DeleteTenantResponse {
  // Any errors encountered
  repeated gcommon.v1.common.Error errors = 1 [(buf.validate.field).repeated.min_items = 1];

  // Success status
  bool success = 2;
}
